--- a/style/global.css
+++ b/style/global.css
@@ -118,7 +118,6 @@ a {
     max-height:449px;
     width: auto;
     height: auto;
-    border: black solid 2px;
     text-align: center;
     margin: 30px 0 158px;
 }
@@ -126,6 +125,28 @@ a {
     width: 345px;
     height: 342px;
 }
+
+.legenda-receitas{
+    margin: 10px 15px;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.bnt-conferir {
+    background-color: #4CAF50; 
+    border: none;
+    color: white;  
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 700;
+  }
+
+  .bnt-conferir:hover{
+      background-color: #09660c;
+  }
 
 .rodape{
     background-color: #FFC107;
